  * debian/watch: Replace the "latest" part with "([\d\.]+)" to make us
    independent of the upstream symlink.
  * debian/README.Debian:
    - Removed obsolete parts about Python and upgrades from 3.4.
    - Added notice about handling default script issues.
  * debian/README.source: Updated for 4.1.1.
  * debian/{compat,control,rules}: Updates for debhelper 8.

 -- Kai Wasserbäch <curan@debian.org>  Sun, 13 Feb 2011 20:18:34 +0100

kvirc (4:4.1.1~svn5467-1) unstable; urgency=low

  The combined "Twisted Experiment" and "Nocturnal Raid" release.

  [ Kai Wasserbäch ]
  * Synced to upstream's SVN revision 5467.
  * debian/rules:
    - Added .PHONY line.
    - Resurrect -DMANUAL_REVISION, got lost somewhere and we build SVN
      revisions again.
    - Replace "-DWITH_NO_EMBEDDED_CODE=YES" with "-DWANT_CRYPTOPP=YES".
    - Change the remaining -DWITH/-DWITHOUT to the new -DWANT syntax.
  * debian/control:
    - Removed DMUA, I'm a DD now.
    - Changed my e-mail address.
    - Removed unneeded relationships (no upgrades over two releases are
      supported).
    - Fix Suggests for kvirc-dbg.
    - kvirc-data: Make the "Suggests: kvirc" a Recommends, doesn't make much
      sense to install the -data package without the program.
  * debian/source/local-options: Added with "unapply-patches".
  * debian/kvirc.lintian-overrides: Updated to work for 4.1.1.
  * debian/patches/21_make_shared-mime-info_B-D_superfluous.patch: Updated.
  * debian/kvirc-data.install: Added .notifyrc.

  [ Raúl Sánchez Siles ]
  * Stating the right version where kvirc-data break and replace should happen.
  * Fixing link to license file.
  * Added French and Portuguese man pages.

 -- Kai Wasserbäch <curan@debian.org>  Sat, 12 Feb 2011 10:40:21 +0100

kvirc (4:4.0.2-1) unstable; urgency=low

  The "Leyline of the Void" release

  * New upstream release. (Closes: #590932)
    - Upstream skipped 4.0.1 as an official release.
    - debian/patches/00_upstream_patches_for_4.0.patch: Deleted.