@@ -11,6 +11,7 @@ kvirc (4:4.1.1~svn5507-1) UNRELEASED; urgency=low
     - Added notice about handling default script issues.
   * debian/README.source: Updated for 4.1.1.
   * debian/{compat,control,rules}: Updates for debhelper 8.
+  * debian/patches/10_fix_desktop_entry.patch: Refreshed.
 
  -- Kai Wasserbäch <curan@debian.org>  Sun, 13 Feb 2011 20:18:34 +0100
 
